--- a/public_html/css/tab_style.css
+++ b/public_html/css/tab_style.css
@@ -13,5 +13,5 @@ and open the template in the editor.
 }
 
 .css_custom_background{
-     background: url("https://mdbootstrap.com/img/Photos/Horizontal/Work/full page/img%20(2).jpg")no-repeat center center;
+     background: url("images/background.png")no-repeat center center;
 }
